# POC2

./: .gitignore  CMakeLists.txt  UA-simulation.py  agtTypPoint.cpp  agtTypPoint.h  agtgpcircle.cpp  agtgpcircle.h  agtgpdot.cpp  agtgpline.cpp  agtgpline.h  agtgprectangle.cpp  agtgprectangle.h  agtmessagebroker.cpp  agtobjecttree.cpp  main.cpp
.github/workflows/: cmake.yml
